feat: support jdk 1.8; use jetty as http server